# MERKAT

./: .eslintrc.cjs  .gitignore  .prettierignore  CLAUDE.md  NOTES.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: app.controller.ts  (+3 more)
apps/desktop/: RELEASE.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
stitch_merkat_retail_design_system/customer_profile_sarah_jenkins/: code.html
stitch_merkat_retail_design_system/merkat_dashboard/: code.html
stitch_merkat_retail_design_system/merkat_dashboard_dark_mode/: code.html
stitch_merkat_retail_design_system/merkat_fulfillment_logistics_dark_mode/: code.html
stitch_merkat_retail_design_system/merkat_fulfillment_logistics_dashboard/: code.html
stitch_merkat_retail_design_system/merkat_inventory_management/: code.html
stitch_merkat_retail_design_system/merkat_inventory_management_dark_mode/: code.html
stitch_merkat_retail_design_system/merkat_reports_analytics_dark_mode/: code.html
stitch_merkat_retail_design_system/merkat_reports_analytics_dashboard/: code.html
stitch_merkat_retail_design_system/merkat_sales_management/: code.html
stitch_merkat_retail_design_system/merkat_sales_management_dark_mode/: code.html
stitch_merkat_retail_design_system/obsidian_operator/: DESIGN.md
(+28 files in other folders)
