[package]
name = "merkat-desktop"
version = "0.0.0"
description = "MERKAT POS desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "merkat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
