[package]
name = "merkat-desktop"
version = "0.0.0"
description = "MERKAT POS desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "merkat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auto-update channel (CLAUDE.md §12 Phase 9). Signatures verify against the
# updater pubkey in tauri.conf.json; release artifacts are signed in CI.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
